# ADCToolbox

./: .gitignore  CD_SETUP_GUIDE.md  CHANGELOG.md  DATASET_RESTRUCTURE_PLAN.md  DATASET_RESTRUCTURE_SUMMARY.md  Dtemp_test_compute_plot.py  EXAMPLES_USAGE_GUIDE.md  GITHUB_PAGES_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_GUIDE.md  PYTHON_TEST_STATUS_REPORT.md  PYTHON_TEST_VALIDATION_COMPLETE.md  README.md  RELEASE_v0.4.0_CHECKLIST.md  TEST_BASIC_IMPLEMENTATION.md  exp_pdf.m  pyproject.toml  temp_add_timing.py  test_scripts_verification.md  test_verbose.m  update_test_config.py
python/: LICENSE  MANIFEST.in  PACKAGING_EXAMPLES.md  README.md  pyproject.toml
python/.claude/: settings.local.json
python/adctoolbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/docs/source/: changelog.rst  conf.py  index.rst  installation.rst  python_matlab_parity.rst  quickstart.rst
python/examples/: INDEX.md  INSTALL.md
python/examples/quickstart/: basic_workflow.py
python/examples/workflows/: complete_adc_analysis.py
python/src/: README  __init__.py
python/src/adctoolbox/: __init__.py  examples_util.py  skill_cli.py  toolset_aout.py  toolset_dout.py  validate_aout_data.py  validate_dout_data.py  weight_scaling.py
python/src/aout/: __init__.py  errEnvelopeSpectrum.py  errHistSine.py  specPlot2Tone.py  spec_plot.py  tomDecomp.py
python/src/common/: alias.py  bitInBand.py
python/src/data_generation/: __init__.py
python/src/dout/: FGCalSine.py  overflowChk.py
python/src/os/: NTFAnalyzer.py  __init__.py
python/src/utils/: __init__.py  calculate_jitter.py
python/tests/: README.md  __init__.py  _utils.py  check_all_tests.py  compare_all_results.py  config.py  conftest.py  debug_noise.py  run_all_tests.py  run_full_test_suite.py  verify_spec_plot_phase.py
python/tests/batch/: __init__.py  compare_all.py  compare_dout.py  run_unit_tests_all.py  run_unit_tests_aout.py  run_unit_tests_common.py  test_toolset_aout.py
python/tests/compare/: __init__.py  _csv_comparator.py  _name_mapping.py  _runner.py  _variable_name_mapping.py  compare_all_results.py  compare_basic.py  compare_parity.py  compare_regression.py  csv_comparator.py  run_all_comparisons.py  run_analog_comparisons.py  run_digital_comparisons.py  test_compare_analyze_phase_spectrum.py  test_compare_analyze_spectrum.py  test_compare_basic.py  test_compare_bit_activity.py  test_compare_enob_bit_sweep.py  test_compare_err_auto_correlation.py  test_compare_err_envelope_spectrum.py  test_compare_err_hist_sine_code.py  test_compare_err_hist_sine_phase.py  test_compare_err_pdf.py  test_compare_err_spectrum.py  test_compare_fg_cal_sine.py  test_compare_fg_cal_sine_overflow_chk.py  test_compare_fit_static_nol.py  test_compare_fit_static_nonlin.py  test_compare_inl_sine.py  test_compare_overflow_chk.py  test_compare_sine_fit.py  test_compare_spec_plot.py  test_compare_spec_plot_phase.py  test_compare_tom_decomp.py  test_compare_weight_scaling.py  test_csv_comparator.py  test_name_mapping.py  test_runner_strict_failures.py
python/tests/generate_golden_reference/: README.md  copy_to_golden.py  golden_alias.py  golden_sine_fit.py  run_python_tests.py
python/tests/golden/: test_golden_reference.py
python/tests/integration/: test_analyze_phase_spectrum_fft.py  test_analyze_phase_spectrum_lms.py  test_analyze_spectrum.py  test_basic.py  test_bit_activity.py  test_decompose_harmonics.py  test_enob_bit_sweep.py  test_err_auto_correlation.py  test_err_envelope_spectrum.py  test_err_hist_sine_code.py  test_err_hist_sine_phase.py  test_err_pdf.py  test_err_spectrum.py  test_fg_cal_sine.py  test_fg_cal_sine_overflow_chk.py  test_fit_static_nol.py  test_fit_static_nonlin.py  test_inl_sine.py  test_overflow_chk.py  test_sine_fit.py  test_spec_plot.py  test_user_guide_skill_examples.py  test_weight_scaling.py
python/tests/system/: compare_all.py  compare_aout.py  compare_common.py  compare_dout.py  run_all_tests.py  run_unit_tests_aout.py  run_unit_tests_common.py  run_unit_tests_dout.py  test_multimodal_report.py  test_toolset_aout.py  test_toolset_dout.py  universal_csv_compare.py
python/tests/unit/: __init__.py  _runner.py  _utils.py  analyze_comparison.py  compare_bit_activity.py  compare_enob_bit_sweep.py  compare_sineFit_results.py  compare_weight_scaling.py  save_fig.py  save_variable.py  test_FGCalSine.py  test_FGCalSine_overflowChk.py  test_alias.py  test_align_spectrum_phase.py  test_basic.py  test_bit_activity.py  test_cap2weight.py  test_enob_bit_sweep.py  test_errEnvelopeSpectrum.py  test_errPDF.py  test_errSpectrum.py  test_err_auto_correlation.py  test_err_envelope_spectrum.py  test_err_hist_sine.py  test_err_hist_sine_code.py  test_err_hist_sine_phase.py  test_err_pdf.py  test_err_spectrum.py  test_fg_cal_sine.py  test_fg_cal_sine_overflow_chk.py  (+29 more)
(+1523 files in other folders)
