[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adctoolbox"
version = "0.1.0"
description = "A comprehensive toolbox for ADC testing and characterization"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Zhishuai Zhang"},
    {name = "Lu Jie"}
]
keywords = ["ADC", "analog-to-digital", "converter", "testing", "characterization", "signal-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Arcadia-1/ADCToolbox"
Documentation = "https://github.com/Arcadia-1/ADCToolbox#readme"
Repository = "https://github.com/Arcadia-1/ADCToolbox"
Issues = "https://github.com/Arcadia-1/ADCToolbox/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["adctoolbox*"]

[tool.setuptools.package-data]
"adctoolbox.examples.data" = ["*.csv"]
"adctoolbox.examples" = ["*.md"]
