[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adctoolbox"
version = "0.2.3"
description = "ADC Testing and Analysis Toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "scipy>=1.6.0",
]

[project.scripts]
adctoolbox-get-examples = "adctoolbox.cli:copy_examples"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"adctoolbox.examples.data" = ["*.csv"]
"adctoolbox.examples" = ["*.md"]
